[project]
name = "techtutter-leetocode-solutions"
version = "0.1.0"
description = "LeetCode problem solutions in Python for interview preparation"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --import-mode=importlib"